concord_examples/tests/ui/auth_unknown_credential_suggestion.stderr
error: unknown auth credential `sessoin`
       did you mean `session`?
       available auth credentials: `session`
  --> tests/ui/auth_unknown_credential_suggestion.rs:11:21
   |
11 |         auth bearer sessoin
   |                     ^^^^^^^
